--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -11,6 +11,8 @@ https://www.tooplate.com/view/2115-marvel
 body {
   font-family: "Maven Pro", sans-serif;
   padding-top: 70px;
+  background: #0c0c0d;
+  color: rgba(255, 255, 255, 0.8);
 }
 
 .full-screen {
@@ -18,7 +20,7 @@ body {
 }
 
 .small-text {
-  color: #5b5b5b;
+  color: #ffc200;
   font-size: 14px;
   font-weight: bold;
   padding: 8px 16px;
@@ -51,7 +53,7 @@ p {
   font-size: 18px;
   font-weight: 300;
   line-height: 1.5;
-  color: #5b5b5b;
+  color: #ffffff;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -60,19 +62,19 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  color: #212121;
+  color: #ffffff;
   font-size: 2.8em;
   margin: 24px 0;
 }
 
 h2 {
-  color: #353535;
+  color: #ffffff;
   font-size: 2.4em;
   font-weight: bold;
 }
 
 h3 {
-  color: #484848;
+  color: #ffffff;
 }
 
 h3,
@@ -81,8 +83,8 @@ b, strong {
 }
 
 .custom-btn {
-  background: #eee;
-  color: #5b5b5b;
+  background: #474559;
+  color: #ffffff;
   font-weight: bold;
   border-radius: 50px;
   padding: 13px 29px;
@@ -111,15 +113,14 @@ b, strong {
   display: inline-block;
   vertical-align: top;
   margin-top: 5px;
-  min-width: 260px;
+  min-width: 360px;
   position: relative;
+  white-space: nowrap;
 }
 
 .animated-item {
   color: #ffc200;
-}
-
-.animated-item {
+  white-space: nowrap;
   font-size: 38px;
   line-height: inherit;
   display: block;
@@ -181,8 +182,8 @@ b, strong {
   transform: translate(0, 0);
 }
 .navbar[class*="headroom--not-top"] {
-  background: #ffffff;
-  border-bottom: 1px solid #f0f0f0;
+  background: #0c0c0d;
+  border-bottom: 1px solid #1f1f1f;
   padding-top: 0;
   padding-bottom: 0;
 }
@@ -199,6 +200,7 @@ b, strong {
   font-weight: bold;
   font-size: 16px;
   overflow: hidden;
+  color: #ffffff;
 }
 .nav-link span {
   position: relative;
@@ -251,7 +253,7 @@ b, strong {
   bottom: 1px;
 }
 .navbar-toggler .navbar-toggler-icon {
-  background: #212121;
+  background: #ffffff;
   display: block;
   width: 100%;
   height: 2px;
@@ -507,7 +509,7 @@ b, strong {
   }
 
   .navbar-collapse {
-    background: #ffffff;
+    background: #0c0c0d;
     text-align: center;
     padding-bottom: 20px;
   }
